WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209915
REGRESSION (
r234685
): Leak of CALayer in createCoreAnimationLayer() in PluginObjectMac.mm
https://bugs.webkit.org/show_bug.cgi?id=209915
Summary
REGRESSION (r234685): Leak of CALayer in createCoreAnimationLayer() in Plugin...
David Kilzer (:ddkilzer)
Reported
2020-04-02 11:27:11 PDT
Leak of CALayer in createCoreAnimationLayer() in PluginObjectMac.mm. CFTypeRef createCoreAnimationLayer() { CALayer *caLayer = [[TestPluginLayer alloc] init]; [...] return CFBridgingRetain(caLayer); } This function currently returns a +2 retained object instead of a +1 retained object.
Attachments
Patch v1
(1.84 KB, patch)
2020-04-02 11:29 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
David Kilzer (:ddkilzer)
Comment 1
2020-04-02 11:29:59 PDT
Created
attachment 395282
[details]
Patch v1
David Kilzer (:ddkilzer)
Comment 2
2020-04-02 11:38:34 PDT
This is also the _last_ static analyzer warning in DumpRenderTree for the version of the clang static analyzer we're running!
EWS
Comment 3
2020-04-02 12:16:12 PDT
Committed
r259403
: <
https://trac.webkit.org/changeset/259403
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395282
[details]
.
Radar WebKit Bug Importer
Comment 4
2020-04-02 12:17:13 PDT
<
rdar://problem/61220322
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug