REGRESSION (r234685): Leak of CALayer in createCoreAnimationLayer() in PluginObjectMac.mm <https://webkit.org/b/209915>

Reviewed by Darin Adler.

* DumpRenderTree/TestNetscapePlugIn/PluginObjectMac.mm:
(createCoreAnimationLayer): Use RetainPtr<> to fix leak.


Canonical link: https://commits.webkit.org/222833@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259403 268f45cc-cd09-0410-ab3c-d52691b4dbfc